# learn_dawn

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
resources/: shader.wgsl
shaders/: shader.wgsl
src/: CMakeLists.txt  aligned_alloc.hpp  app.cpp  app.hpp  debug.cpp  debug.hpp  loader.cpp  loader.hpp  main.cpp
